--- a/99_Projektarbeit_COC_BRA/99_Projektarbeit_COC_BRA/Projektarbeit_COC_BRA/Debug/Makefile
+++ b/99_Projektarbeit_COC_BRA/99_Projektarbeit_COC_BRA/Projektarbeit_COC_BRA/Debug/Makefile
@@ -32,12 +32,36 @@ LIB_DEP:=
 LINKER_SCRIPT_DEP:=
 
 # Every subdirectory with source files must be described here
-SUBDIRS := 
+SUBDIRS :=  \
+../include/ \
+../include/libraries/ \
+../include/libraries/hd44780/ \
+../include/libraries/hd44780/examples/ \
+../include/libraries/hd44780/examples/Documentation/ \
+../include/libraries/hd44780/examples/Documentation/docs/ \
+../include/libraries/hd44780/hd44780ioClass/ \
+../include/libraries/Wire/ \
+../include/libraries/Wire/src/ \
+../include/libraries/Wire/src/utility/ \
+../src/ \
+../src/libraries/ \
+../src/libraries/hd44780/ \
+../src/libraries/LiquidCrystal/ \
+../src/libraries/LiquidCrystal/src/ \
+../src/libraries/Wire/ \
+../src/libraries/Wire/src/ \
+../src/libraries/Wire/src/utility/
 
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
-../Sketch.cpp
+../Romeo_keys.cpp \
+../Sketch.cpp \
+../SketchCOC_Old.cpp \
+../src/libraries/hd44780/hd44780.cpp \
+../src/libraries/LiquidCrystal/src/LiquidCrystal.cpp \
+../src/libraries/Wire/src/utility/twi.c \
+../src/libraries/Wire/src/Wire.cpp
 
 
 PREPROCESSING_SRCS += 
@@ -47,16 +71,40 @@ ASM_SRCS +=
 
 
 OBJS +=  \
-Sketch.o
+Romeo_keys.o \
+Sketch.o \
+SketchCOC_Old.o \
+src/libraries/hd44780/hd44780.o \
+src/libraries/LiquidCrystal/src/LiquidCrystal.o \
+src/libraries/Wire/src/utility/twi.o \
+src/libraries/Wire/src/Wire.o
 
 OBJS_AS_ARGS +=  \
-Sketch.o
+Romeo_keys.o \
+Sketch.o \
+SketchCOC_Old.o \
+src/libraries/hd44780/hd44780.o \
+src/libraries/LiquidCrystal/src/LiquidCrystal.o \
+src/libraries/Wire/src/utility/twi.o \
+src/libraries/Wire/src/Wire.o
 
 C_DEPS +=  \
-Sketch.d
+Romeo_keys.d \
+Sketch.d \
+SketchCOC_Old.d \
+src/libraries/hd44780/hd44780.d \
+src/libraries/LiquidCrystal/src/LiquidCrystal.d \
+src/libraries/Wire/src/utility/twi.d \
+src/libraries/Wire/src/Wire.d
 
 C_DEPS_AS_ARGS +=  \
-Sketch.d
+Romeo_keys.d \
+Sketch.d \
+SketchCOC_Old.d \
+src/libraries/hd44780/hd44780.d \
+src/libraries/LiquidCrystal/src/LiquidCrystal.d \
+src/libraries/Wire/src/utility/twi.d \
+src/libraries/Wire/src/Wire.d
 
 OUTPUT_FILE_PATH +=Projektarbeit_COC_BRA.elf
 
@@ -73,10 +121,52 @@ LINKER_SCRIPT_DEP+=
 
 
 # AVR32/GNU C Compiler
+./Romeo_keys.o: .././Romeo_keys.cpp
+	@echo Building file: $<
+	@echo Invoking: AVR8/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DDEBUG -DF_CPU=16000000L -DARDUINO=108010 -DARDUINO_AVR_LEONARDO -DARDUINO_ARCH_AVR -DUSB_VID=0x2341 -DUSB_PID=0x8036 -DUSB_PRODUCT="\"Arduino Leonardo\"" -DUSB_MANUFACTURER="\"Arduino LLC\""  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.3.300\include" -I"..\\..\ArduinoCore\include\core" -I"..\\..\ArduinoCore\include\Arduino_Radar_Projekt\__vm" -I"..\\..\ArduinoCore\include\LED_Pinbelegung\__vm" -I"..\\..\ArduinoCore\include\libraries\hd44780" -I"..\\..\ArduinoCore\include\libraries\SharpIR-master" -I"..\\..\ArduinoCore\include\libraries\hd44780\hd44780ioClass" -I"..\\..\ArduinoCore\include\mc1_FS19_P4_Cyrill_Coray_DO\__vm" -I"..\\..\ArduinoCore\include\Motorensteuerung\__vm" -I"..\\..\ArduinoCore\include\Pruefung_2\__vm" -I"..\\..\ArduinoCore\include\Test_01\__vm" -I"..\\..\ArduinoCore\include\Test_02\__vm" -I"..\\..\ArduinoCore\include\variants\leonardo" -I"..\include\libraries\Wire\src" -I"..\include\libraries\Wire\src\utility" -I"..\include\libraries\LiquidCrystal\src" -I"..\include\libraries\hd44780" -I"..\include\libraries\hd44780\examples\Documentation\docs" -I"..\include\libraries\hd44780\hd44780ioClass"  -Os -fno-threadsafe-statics -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -w -mmcu=atmega32u4 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.3.300\gcc\dev\atmega32u4" -c -std=gnu++11 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
 ./Sketch.o: .././Sketch.cpp
 	@echo Building file: $<
 	@echo Invoking: AVR8/GNU C Compiler : 5.4.0
-	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DDEBUG -DF_CPU=16000000L -DARDUINO=108010 -DARDUINO_AVR_LEONARDO -DARDUINO_ARCH_AVR -DUSB_VID=0x2341 -DUSB_PID=0x8036 -DUSB_PRODUCT="\"Arduino Leonardo\"" -DUSB_MANUFACTURER="\"Arduino LLC\""  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.3.300\include" -I"..\\..\ArduinoCore\include\core" -I"..\\..\ArduinoCore\include\Arduino_Radar_Projekt\__vm" -I"..\\..\ArduinoCore\include\LED_Pinbelegung\__vm" -I"..\\..\ArduinoCore\include\libraries\hd44780" -I"..\\..\ArduinoCore\include\libraries\SharpIR-master" -I"..\\..\ArduinoCore\include\libraries\hd44780\hd44780ioClass" -I"..\\..\ArduinoCore\include\mc1_FS19_P4_Cyrill_Coray_DO\__vm" -I"..\\..\ArduinoCore\include\Motorensteuerung\__vm" -I"..\\..\ArduinoCore\include\Pruefung_2\__vm" -I"..\\..\ArduinoCore\include\Test_01\__vm" -I"..\\..\ArduinoCore\include\Test_02\__vm" -I"..\\..\ArduinoCore\include\variants\leonardo"  -Os -fno-threadsafe-statics -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -w -mmcu=atmega32u4 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.3.300\gcc\dev\atmega32u4" -c -std=gnu++11 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DDEBUG -DF_CPU=16000000L -DARDUINO=108010 -DARDUINO_AVR_LEONARDO -DARDUINO_ARCH_AVR -DUSB_VID=0x2341 -DUSB_PID=0x8036 -DUSB_PRODUCT="\"Arduino Leonardo\"" -DUSB_MANUFACTURER="\"Arduino LLC\""  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.3.300\include" -I"..\\..\ArduinoCore\include\core" -I"..\\..\ArduinoCore\include\Arduino_Radar_Projekt\__vm" -I"..\\..\ArduinoCore\include\LED_Pinbelegung\__vm" -I"..\\..\ArduinoCore\include\libraries\hd44780" -I"..\\..\ArduinoCore\include\libraries\SharpIR-master" -I"..\\..\ArduinoCore\include\libraries\hd44780\hd44780ioClass" -I"..\\..\ArduinoCore\include\mc1_FS19_P4_Cyrill_Coray_DO\__vm" -I"..\\..\ArduinoCore\include\Motorensteuerung\__vm" -I"..\\..\ArduinoCore\include\Pruefung_2\__vm" -I"..\\..\ArduinoCore\include\Test_01\__vm" -I"..\\..\ArduinoCore\include\Test_02\__vm" -I"..\\..\ArduinoCore\include\variants\leonardo" -I"..\include\libraries\Wire\src" -I"..\include\libraries\Wire\src\utility" -I"..\include\libraries\LiquidCrystal\src" -I"..\include\libraries\hd44780" -I"..\include\libraries\hd44780\examples\Documentation\docs" -I"..\include\libraries\hd44780\hd44780ioClass"  -Os -fno-threadsafe-statics -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -w -mmcu=atmega32u4 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.3.300\gcc\dev\atmega32u4" -c -std=gnu++11 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+./SketchCOC_Old.o: .././SketchCOC_Old.cpp
+	@echo Building file: $<
+	@echo Invoking: AVR8/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DDEBUG -DF_CPU=16000000L -DARDUINO=108010 -DARDUINO_AVR_LEONARDO -DARDUINO_ARCH_AVR -DUSB_VID=0x2341 -DUSB_PID=0x8036 -DUSB_PRODUCT="\"Arduino Leonardo\"" -DUSB_MANUFACTURER="\"Arduino LLC\""  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.3.300\include" -I"..\\..\ArduinoCore\include\core" -I"..\\..\ArduinoCore\include\Arduino_Radar_Projekt\__vm" -I"..\\..\ArduinoCore\include\LED_Pinbelegung\__vm" -I"..\\..\ArduinoCore\include\libraries\hd44780" -I"..\\..\ArduinoCore\include\libraries\SharpIR-master" -I"..\\..\ArduinoCore\include\libraries\hd44780\hd44780ioClass" -I"..\\..\ArduinoCore\include\mc1_FS19_P4_Cyrill_Coray_DO\__vm" -I"..\\..\ArduinoCore\include\Motorensteuerung\__vm" -I"..\\..\ArduinoCore\include\Pruefung_2\__vm" -I"..\\..\ArduinoCore\include\Test_01\__vm" -I"..\\..\ArduinoCore\include\Test_02\__vm" -I"..\\..\ArduinoCore\include\variants\leonardo" -I"..\include\libraries\Wire\src" -I"..\include\libraries\Wire\src\utility" -I"..\include\libraries\LiquidCrystal\src" -I"..\include\libraries\hd44780" -I"..\include\libraries\hd44780\examples\Documentation\docs" -I"..\include\libraries\hd44780\hd44780ioClass"  -Os -fno-threadsafe-statics -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -w -mmcu=atmega32u4 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.3.300\gcc\dev\atmega32u4" -c -std=gnu++11 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+src/libraries/hd44780/hd44780.o: ../src/libraries/hd44780/hd44780.cpp
+	@echo Building file: $<
+	@echo Invoking: AVR8/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DDEBUG -DF_CPU=16000000L -DARDUINO=108010 -DARDUINO_AVR_LEONARDO -DARDUINO_ARCH_AVR -DUSB_VID=0x2341 -DUSB_PID=0x8036 -DUSB_PRODUCT="\"Arduino Leonardo\"" -DUSB_MANUFACTURER="\"Arduino LLC\""  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.3.300\include" -I"..\\..\ArduinoCore\include\core" -I"..\\..\ArduinoCore\include\Arduino_Radar_Projekt\__vm" -I"..\\..\ArduinoCore\include\LED_Pinbelegung\__vm" -I"..\\..\ArduinoCore\include\libraries\hd44780" -I"..\\..\ArduinoCore\include\libraries\SharpIR-master" -I"..\\..\ArduinoCore\include\libraries\hd44780\hd44780ioClass" -I"..\\..\ArduinoCore\include\mc1_FS19_P4_Cyrill_Coray_DO\__vm" -I"..\\..\ArduinoCore\include\Motorensteuerung\__vm" -I"..\\..\ArduinoCore\include\Pruefung_2\__vm" -I"..\\..\ArduinoCore\include\Test_01\__vm" -I"..\\..\ArduinoCore\include\Test_02\__vm" -I"..\\..\ArduinoCore\include\variants\leonardo" -I"..\include\libraries\Wire\src" -I"..\include\libraries\Wire\src\utility" -I"..\include\libraries\LiquidCrystal\src" -I"..\include\libraries\hd44780" -I"..\include\libraries\hd44780\examples\Documentation\docs" -I"..\include\libraries\hd44780\hd44780ioClass"  -Os -fno-threadsafe-statics -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -w -mmcu=atmega32u4 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.3.300\gcc\dev\atmega32u4" -c -std=gnu++11 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+src/libraries/LiquidCrystal/src/LiquidCrystal.o: ../src/libraries/LiquidCrystal/src/LiquidCrystal.cpp
+	@echo Building file: $<
+	@echo Invoking: AVR8/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DDEBUG -DF_CPU=16000000L -DARDUINO=108010 -DARDUINO_AVR_LEONARDO -DARDUINO_ARCH_AVR -DUSB_VID=0x2341 -DUSB_PID=0x8036 -DUSB_PRODUCT="\"Arduino Leonardo\"" -DUSB_MANUFACTURER="\"Arduino LLC\""  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.3.300\include" -I"..\\..\ArduinoCore\include\core" -I"..\\..\ArduinoCore\include\Arduino_Radar_Projekt\__vm" -I"..\\..\ArduinoCore\include\LED_Pinbelegung\__vm" -I"..\\..\ArduinoCore\include\libraries\hd44780" -I"..\\..\ArduinoCore\include\libraries\SharpIR-master" -I"..\\..\ArduinoCore\include\libraries\hd44780\hd44780ioClass" -I"..\\..\ArduinoCore\include\mc1_FS19_P4_Cyrill_Coray_DO\__vm" -I"..\\..\ArduinoCore\include\Motorensteuerung\__vm" -I"..\\..\ArduinoCore\include\Pruefung_2\__vm" -I"..\\..\ArduinoCore\include\Test_01\__vm" -I"..\\..\ArduinoCore\include\Test_02\__vm" -I"..\\..\ArduinoCore\include\variants\leonardo" -I"..\include\libraries\Wire\src" -I"..\include\libraries\Wire\src\utility" -I"..\include\libraries\LiquidCrystal\src" -I"..\include\libraries\hd44780" -I"..\include\libraries\hd44780\examples\Documentation\docs" -I"..\include\libraries\hd44780\hd44780ioClass"  -Os -fno-threadsafe-statics -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -w -mmcu=atmega32u4 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.3.300\gcc\dev\atmega32u4" -c -std=gnu++11 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+src/libraries/Wire/src/utility/twi.o: ../src/libraries/Wire/src/utility/twi.c
+	@echo Building file: $<
+	@echo Invoking: AVR8/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG -DF_CPU=16000000L -DARDUINO=108010 -DARDUINO_AVR_LEONARDO -DARDUINO_ARCH_AVR -DUSB_VID=0x2341 -DUSB_PID=0x8036 -DUSB_PRODUCT="\"Arduino Leonardo\"" -DUSB_MANUFACTURER="\"Arduino LLC\""  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.3.300\include" -I"..\\..\ArduinoCore\include\core" -I"..\\..\ArduinoCore\include\Arduino_Radar_Projekt\__vm" -I"..\\..\ArduinoCore\include\LED_Pinbelegung\__vm" -I"..\\..\ArduinoCore\include\libraries\hd44780" -I"..\\..\ArduinoCore\include\libraries\SharpIR-master" -I"..\\..\ArduinoCore\include\libraries\hd44780\hd44780ioClass" -I"..\\..\ArduinoCore\include\mc1_FS19_P4_Cyrill_Coray_DO\__vm" -I"..\\..\ArduinoCore\include\Motorensteuerung\__vm" -I"..\\..\ArduinoCore\include\Pruefung_2\__vm" -I"..\\..\ArduinoCore\include\Test_01\__vm" -I"..\\..\ArduinoCore\include\Test_02\__vm" -I"..\\..\ArduinoCore\include\variants\leonardo" -I"..\include\libraries\Wire\src" -I"..\include\libraries\Wire\src\utility" -I"..\include\libraries\LiquidCrystal\src" -I"..\include\libraries\hd44780" -I"..\include\libraries\hd44780\examples\Documentation\docs" -I"..\include\libraries\hd44780\hd44780ioClass"  -Os -fno-threadsafe-statics -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -w -mmcu=atmega32u4 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.3.300\gcc\dev\atmega32u4" -c -std=gnu99 -std=gnu11 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+src/libraries/Wire/src/Wire.o: ../src/libraries/Wire/src/Wire.cpp
+	@echo Building file: $<
+	@echo Invoking: AVR8/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DDEBUG -DF_CPU=16000000L -DARDUINO=108010 -DARDUINO_AVR_LEONARDO -DARDUINO_ARCH_AVR -DUSB_VID=0x2341 -DUSB_PID=0x8036 -DUSB_PRODUCT="\"Arduino Leonardo\"" -DUSB_MANUFACTURER="\"Arduino LLC\""  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.3.300\include" -I"..\\..\ArduinoCore\include\core" -I"..\\..\ArduinoCore\include\Arduino_Radar_Projekt\__vm" -I"..\\..\ArduinoCore\include\LED_Pinbelegung\__vm" -I"..\\..\ArduinoCore\include\libraries\hd44780" -I"..\\..\ArduinoCore\include\libraries\SharpIR-master" -I"..\\..\ArduinoCore\include\libraries\hd44780\hd44780ioClass" -I"..\\..\ArduinoCore\include\mc1_FS19_P4_Cyrill_Coray_DO\__vm" -I"..\\..\ArduinoCore\include\Motorensteuerung\__vm" -I"..\\..\ArduinoCore\include\Pruefung_2\__vm" -I"..\\..\ArduinoCore\include\Test_01\__vm" -I"..\\..\ArduinoCore\include\Test_02\__vm" -I"..\\..\ArduinoCore\include\variants\leonardo" -I"..\include\libraries\Wire\src" -I"..\include\libraries\Wire\src\utility" -I"..\include\libraries\LiquidCrystal\src" -I"..\include\libraries\hd44780" -I"..\include\libraries\hd44780\examples\Documentation\docs" -I"..\include\libraries\hd44780\hd44780ioClass"  -Os -fno-threadsafe-statics -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -w -mmcu=atmega32u4 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.3.300\gcc\dev\atmega32u4" -c -std=gnu++11 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
 	@echo Finished building: $<
 	
 
